# sol2ink

./: .gitignore  404.html  Cargo.toml  README.md  index.html  sitemap.xml
.github/workflows/: ci.yml  deploy.yml
assets/css/: styles.4891ba89.css
assets/js/: 0a5aa94d.25fcd39f.js  0a5aa94d.b9f326e2.js  0a5aa94d.c348579a.js  0e384e19.a5166f29.js  0e384e19.c1002485.js  0e384e19.ee105f0e.js  17896441.92c726f2.js  17896441.cee626c7.js  17896441.fe7d1c20.js  1be78505.175b61c4.js  1be78505.3e5211e0.js  2f03dfc8.557f4315.js  2f03dfc8.c84b709b.js  2f03dfc8.e9e9c2f4.js  300d551f.b1434e7a.js  300d551f.b49be1db.js  300d551f.f7f94a2d.js  444f81b2.3fe00eee.js  444f81b2.bd029281.js  444f81b2.c9469e7b.js  444f81b2.d86f8197.js  5cfcab96.064ae53f.js  5cfcab96.4e9d6a2d.js  5cfcab96.c7745252.js  5cfcab96.d742b439.js  5cfcab96.e93d5a0a.js  5cfcab96.ff68a7be.js  620750a6.051519af.js  620750a6.ad8593ee.js  620750a6.c165a650.js  6f2e1fd1.7c54099c.js  6f2e1fd1.c6855c44.js  6f2e1fd1.cf1f50e2.js  8855227d.746e539b.js  8855227d.782321e3.js  8855227d.bf9a981a.js  8855227d.d69dc688.js  935f2afb.44a9ee5b.js  935f2afb.53a6584f.js  935f2afb.a47b93b5.js  (+28 more)
capabilities/: index.html
docs/: docusaurus.config.js
docs/docs/: capabilities.md  how-to-use.md  intro.md  issues.md
examples/: ArrayContract.sol  ERC721.sol  StructContract.sol
examples/contracts/ERC1155/contract/: Cargo.toml  lib.rs
how-to-use/: index.html
how_it_works/assembler/: index.html
how_it_works/parsing/: index.html
how_it_works/parsing_contract/: index.html
how_it_works/parsing_expressions/: index.html
how_it_works/parsing_functions/: index.html
how_it_works/parsing_interface/: index.html
how_it_works/parsing_library/: index.html
issues/: index.html
output/: output.txt
src/: assembler.rs  cli.rs  file_utils.rs  formatter.rs  main.rs  parser.rs  parser2.rs  poseidon.rs  structures.rs  toml_builder.rs
tests/: file_change_tests.rs
(+184 files in other folders)
